Fix : Video player overflow

--- a/src/pages/PlayVideo/PlayVideo.module.css
+++ b/src/pages/PlayVideo/PlayVideo.module.css
@@ -1,9 +1,9 @@
 .container {
   width: 100%;
   max-width: 100vw;
-  min-height: calc(100vh - 6rem);
+  min-height: calc(100vh - 9rem);
   display: grid;
-  grid-template-columns: 65% 30%;
+  grid-template-columns: 1fr 0.6fr;
   grid-gap: 2%;
   margin: 0;
   justify-content: flex-start;
@@ -112,6 +112,24 @@
   background-color: var(--PRIMARY_HOVER);
 }
 
+.dialog {
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.25 rem 0px;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  font-size: small;
+  font-weight: bold;
+  background-color: inherit;
+  transition: background-color var(--ANIM) 300ms;
+}
+
+.dialog:hover {
+  background-color: var(--HOVER_BG_ACTIVE);
+  transition: background-color var(--ANIM) 300ms;
+}
+
 .blurBG {
   filter: blur(4px) brightness(0.9);
 }
@@ -138,6 +156,7 @@
 
   .related_section {
     height: fit-content;
+    padding: 0 1rem;
   }
 
   .related_videos {
@@ -165,7 +184,8 @@
   }
 
   .suggested_container {
-    width: fit-content;
+    width: 100%;
+    padding: 0 2rem;
     background-color: var(--BG_LIGHT);
     height: fit-content;
     gap: 20px;
